--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,8 @@ DerivedData
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+Example/Pods/
+Pods/
+Example/engagement-ios.xcworkspace
+
+Podfile.lock
