--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,10 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-target 'eventtracker-ios', :exclusive => true do
+target 'eventtracker-ios' do
   pod "eventtracker-ios", :path => "../"
 end
 
-target 'Tests', :exclusive => true do
+target 'Tests' do
   pod "eventtracker-ios", :path => "../"
 
   pod 'Specta', '~> 0.2.1'
