Remove deprecated eventtracker-ios files and update README for arclight-event-tracker integration

--- a/Example/arclight-event-tracker.xcodeproj/xcshareddata/xcschemes/arclight-event-tracker.xcscheme
+++ b/Example/arclight-event-tracker.xcodeproj/xcshareddata/xcschemes/arclight-event-tracker.xcscheme
@@ -15,18 +15,27 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "eventtracker-ios.app"
-               BlueprintName = "eventtracker-ios"
-               ReferencedContainer = "container:eventtracker-ios.xcodeproj">
+               BuildableName = "arclight-event-tracker.app"
+               BlueprintName = "arclight-event-tracker"
+               ReferencedContainer = "container:arclight-event-tracker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6003F589195388D20070C39A"
+            BuildableName = "arclight-event-tracker.app"
+            BlueprintName = "arclight-event-tracker"
+            ReferencedContainer = "container:arclight-event-tracker.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -35,54 +44,46 @@
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
                BuildableName = "Tests.xctest"
                BlueprintName = "Tests"
-               ReferencedContainer = "container:eventtracker-ios.xcodeproj">
+               ReferencedContainer = "container:arclight-event-tracker.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "eventtracker-ios.app"
-            BlueprintName = "eventtracker-ios"
-            ReferencedContainer = "container:eventtracker-ios.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "eventtracker-ios.app"
-            BlueprintName = "eventtracker-ios"
-            ReferencedContainer = "container:eventtracker-ios.xcodeproj">
+            BuildableName = "arclight-event-tracker.app"
+            BlueprintName = "arclight-event-tracker"
+            ReferencedContainer = "container:arclight-event-tracker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "eventtracker-ios.app"
-            BlueprintName = "eventtracker-ios"
-            ReferencedContainer = "container:eventtracker-ios.xcodeproj">
+            BuildableName = "arclight-event-tracker.app"
+            BlueprintName = "arclight-event-tracker"
+            ReferencedContainer = "container:arclight-event-tracker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
