--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,13 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-target 'eventtracker-ios' do
-  pod "eventtracker-ios", :path => "../"
+platform :ios, '9.0'
+
+target 'arclight-event-tracker' do
+  pod 'arclight-event-tracker', :path => "../"
 end
 
 target 'Tests' do
-  pod "eventtracker-ios", :path => "../"
+  pod 'arclight-event-tracker', :path => "../"
 
   pod 'Specta', '~> 0.2.1'
   pod 'Expecta'
