--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,14 @@ jobs:
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode.app
       
+    - name: Get Ruby version
+      id: ruby-version
+      run: echo "version=$(cat .ruby-version)" >> $GITHUB_OUTPUT
+      
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version-file: .ruby-version
+        ruby-version: ${{ steps.ruby-version.outputs.version }}
         bundler-cache: true
         
     - name: Install CocoaPods
