--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,15 @@
+# frozen_string_literal: true
+
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '12.0'
 
 target 'arclight-event-tracker' do
-  pod 'arclight-event-tracker', :path => "../"
+  pod 'arclight-event-tracker', path: '../'
 end
 
 target 'Tests' do
-  pod 'arclight-event-tracker', :path => "../"
+  pod 'arclight-event-tracker', path: '../'
 
   pod 'Specta', '~> 0.2.1'
   pod 'Expecta'
