Remove repo-update flag from CocoaPods installation in CI workflow to streamline pod installation process

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       if: steps.cocoapods-cache.outputs.cache-hit != 'true'
       working-directory: Example
       run: |
-        bundle exec pod install --repo-update
+        bundle exec pod install
         
     - name: List available simulators
       run: xcrun simctl list devices available
