--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,15 +74,14 @@ jobs:
       run: |
         xcodebuild test \
           -workspace arclight-event-tracker.xcworkspace \
-          -scheme arclight-event-tracker \
+          -target Tests \
           -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
           -configuration Debug \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
           CODE_SIGNING_ALLOWED=NO \
           DEVELOPMENT_TEAM="" \
-          PROVISIONING_PROFILE="" \
-          -only-testing:Tests
+          PROVISIONING_PROFILE=""
           
     - name: Build podspec
       run: |
