--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         ruby-version: ${{ steps.ruby-version.outputs.version }}
         bundler-cache: true
-        
+
     - name: Run RuboCop
       run: |
         bundle exec rubocop
@@ -61,7 +61,7 @@ jobs:
         xcodebuild clean build \
           -workspace arclight-event-tracker.xcworkspace \
           -scheme arclight-event-tracker \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+          -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
           -configuration Debug \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
@@ -74,14 +74,15 @@ jobs:
       run: |
         xcodebuild test \
           -workspace arclight-event-tracker.xcworkspace \
-          -target Tests \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+          -scheme arclight-event-tracker \
+          -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
           -configuration Debug \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
           CODE_SIGNING_ALLOWED=NO \
           DEVELOPMENT_TEAM="" \
-          PROVISIONING_PROFILE=""
+          PROVISIONING_PROFILE="" \
+          -only-testing:Tests
           
     - name: Build podspec
       run: |
