Update podspec source tag format, adjust CI cache paths, and bump arclight-event-tracker version to 1.20.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
       with:
         path: |
           Example/Pods
+          ~/.cocoapods/repos
           ~/Library/Caches/CocoaPods
-          ~/.cocoapods
         key: ${{ runner.os }}-pods-${{ hashFiles('**/Example/Podfile.lock') }}
         restore-keys: |
           ${{ runner.os }}-pods-
